--- a/templates-back-final/python_common_resource.vm
+++ b/templates-back-final/python_common_resource.vm
@@ -2,6 +2,7 @@ ${SHARP} Python class for commons resources
 ${SHARP} Created on $today.date ( Time $today.time )
 
 from bottle import route, response, hook, request
+import traceback
 import json
 
 
@@ -23,7 +24,7 @@ def error_400():
 
 
 def error_500(e):
-    print(e)
+    traceback.print_exc()
     response.status = 500
     return {"error": 500, "error_description": "{}".format(e)}
 
@@ -31,71 +32,51 @@ def error_500(e):
 def get_all(json_serializer, entities):
     result = [json_serializer.to_json(entity) for entity in entities]
     response.status = 200
-    response.body = json.dumps(result)
-    return response.body
+    return json.dumps(result)
 
 
-def get_by_id(result, entity_class, json_serializer):
+def get_by_id(result, json_serializer):
     if result:
-        if type(result) == entity_class:
-            response.status = 200
-            return json_serializer.to_json(result)
-        else:
-            return error_500(result)
+        response.status = 200
+        return json_serializer.to_json(result)
     else:
         response.status = 404
 
 
-def create(result, json_serializer, entity_class):
+def create(result, json_serializer):
     if result:
-        if type(result) == entity_class:
-            response.status = 201
-            return json_serializer.to_json(result)
-        else:
-            return error_500(result)
+        response.status = 201
+        return json_serializer.to_json(result)
     else:
         response.status = 409
 
 
 def update(result):
     if result:
-        if type(result) == int and result > 0:
-            response.status = 200
-        else:
-            response.status = 500
-            return {"error": 500, "error_description": "{}".format(result)}
+        response.status = 200
     else:
         response.status = 404
 
 
-def save(result, entity_class, json_serializer, entity):
-    if type(result['entity']) == entity_class and result['isNew']:
+def save(result, json_serializer, entity):
+    if result['isNew']:
         response.status = 201
         return json_serializer.to_json(result['entity'])
-    elif type(result['entity']) == entity_class and not result['isNew']:
+    else:
         response.status = 200
         return json_serializer.to_json(entity)
-    else:
-        response.status = 500
-        return {"error": 500, "error_description": "{}".format(result['entity'])}
 
 
 def delete(result):
     if result:
-        if type(result) == int and result > 0:
-            response.status = 204
-        else:
-            error_500(result)
+        response.status = 204
     else:
         response.status = 404
 
 
 def count(result):
-    if type(result) == int:
-        response.status = 200
-        return {"count": result}
-    else:
-        error_500(result)
+    response.status = 200
+    return {"count": result}
 
 
 def body_from_json(json_serializer):
